feat: Atualização do DTO para exibir o progresso do usuáario na missão e mudanças no design da página de missões